src/vs/workbench/contrib/chat/browser/widget/media/chat.css
/* ... */
/* Style the internal toolbar element to use flexbox */
.interactive-item-container .chat-footer-toolbar .monaco-toolbar {
	display: flex;
	justify-content: space-between;
	align-items: center;
}

.interactive-item-container .chat-footer-details {
	display: none;
	padding: 0;
	font-size: var(--vscode-chat-font-size-body-xs);
	opacity: 0.7;
	color: var(--vscode-descriptionForeground);
	line-height: 16px;
	margin-left: auto;
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
}

.interactive-item-container .chat-footer-details.hidden {
	display: none !important;
}

.interactive-item-container .value {
	width: 100%;
}

.interactive-item-container > .value .chat-used-context {
	margin-bottom: 10px;
}

.interactive-item-container .value .rendered-markdown:not(:has(.chat-extensions-content-part)) {
	.codicon {
		font-size: inherit;
	}

	.interactive-result-code-block .codicon {
		font-size: initial;
	}
}

.interactive-item-container .value .rendered-markdown blockquote {
	margin: 0px;
	padding: 0px 16px 0 10px;
	border-left-width: 5px;
	border-left-style: solid;
	border-radius: 2px;
	background: var(--vscode-textBlockQuote-background);
	border-color: var(--vscode-textBlockQuote-border);
}

.interactive-item-container .value .rendered-markdown strong {
	font-weight: 600;
}

.interactive-item-container .value .rendered-markdown table {
	width: 100%;
	text-align: left;
	margin-bottom: 16px;
	border-radius: var(--vscode-cornerRadius-medium);
	overflow: hidden;
	border-collapse: separate;
	border-spacing: 0;
	border: 1px solid var(--vscode-chat-requestBorder);
}

.interactive-item-container .value .rendered-markdown table td,
.interactive-item-container .value .rendered-markdown table th {
	border: 1px solid var(--vscode-chat-requestBorder);
	border-top: none;
	border-left: none;
	padding: 4px 6px;
}

.interactive-item-container .value .rendered-markdown table td:last-child,
.interactive-item-container .value .rendered-markdown table th:last-child {
	border-right: none;
}

.interactive-item-container .value .rendered-markdown table tr:last-child td,
.interactive-item-container .value .rendered-markdown table tr:last-child th {
	border-bottom: none;
}

.interactive-item-container .value .rendered-markdown a,
.interactive-item-container .value .interactive-session-followups,
.interactive-item-container .value .rendered-markdown a code {
	color: var(--vscode-textLink-foreground);
}

.interactive-item-container .value .rendered-markdown .chat-extensions-content-part a {
	color: inherit;
}

.interactive-item-container .value .rendered-markdown a {
	user-select: text;
}

.interactive-item-container .value .rendered-markdown a:hover,
.interactive-item-container .value .rendered-markdown a:active {
	color: var(--vscode-textLink-activeForeground);
}

.hc-black .interactive-item-container .value .rendered-markdown a code,
.hc-light .interactive-item-container .value .rendered-markdown a code {
	color: var(--vscode-textPreformat-foreground);
}

.interactive-list {
	overflow: hidden;
	position: relative;
	/* For the scroll down button */
}

.hc-black .interactive-request,
.hc-light .interactive-request {
	border-left: 3px solid var(--vscode-chat-requestBorder);
	border-right: 3px solid var(--vscode-chat-requestBorder);
}

.interactive-item-container .value {
	white-space: normal;
	overflow-wrap: anywhere;
}

.interactive-item-container .value > :last-child,
.interactive-item-container .value > :last-child.rendered-markdown > :last-child,
.interactive-item-container.interactive-request .value .rendered-markdown > :last-child {
	margin-bottom: 0px;
}

.interactive-item-container .value .rendered-markdown hr {
	border-color: rgba(0, 0, 0, 0.18);
}

.vs-dark .interactive-item-container .value .rendered-markdown hr {
	border-color: rgba(255, 255, 255, 0.18);
}

.interactive-item-container .value .rendered-markdown h1 {
	font-size: var(--vscode-chat-font-size-body-xxl);
	font-weight: 600;
	margin: 1.5em 0 0.875em 0;
	font-family: var(--vscode-chat-font-family, inherit);

}

.interactive-item-container .value .rendered-markdown h2 {
	font-size: var(--vscode-chat-font-size-body-xl);
	font-weight: 600;
	margin: 1.5em 0 0.875em 0;
	font-family: var(--vscode-chat-font-family, inherit);
}

.interactive-item-container .value .rendered-markdown h3 {
	font-size: var(--vscode-chat-font-size-body-l);
	font-weight: 600;
	margin: 1.5em 0 0.875em 0;
	font-family: var(--vscode-chat-font-family, inherit);
}

.interactive-item-container.editing-session .value .rendered-markdown p:has(+ [data-code] > .chat-codeblock-pill-widget) {
	margin-bottom: 8px;
}

.interactive-item-container.editing-session .value .rendered-markdown h3 {
	font-size: var(--vscode-chat-font-size-body-m);
	margin: 1.5em 0 0.875em 0;
}

/* Codicons next to text need to be aligned with the text */
.interactive-item-container .value .rendered-markdown:not(:has(.chat-extensions-content-part)) .codicon {
	position: relative;
	top: 2px;
}

.interactive-item-container .value .rendered-markdown {
	.chat-codeblock-pill-widget .codicon {
		top: -1px;
	}

	/* But codicons in toolbars assume the natural position of the codicon */
	.monaco-toolbar .codicon {
		position: initial;
		top: initial;
	}

	/* Code blocks at the beginning of an answer should not have a margin as it means it won't align with the agent icon*/
	> div[data-code]:first-child {
		margin-top: 0;

	}

	/* Override the top to avoid the toolbar getting clipped by overflow:hidden */
	> div[data-code]:first-child .interactive-result-code-block .interactive-result-code-block-toolbar > .monaco-action-bar,
	> div[data-code]:first-child .interactive-result-code-block .interactive-result-code-block-toolbar > .monaco-toolbar {
		top: 6px;
	}
}
/* ... */

